  + Changed the signature of ~doom-resize-window~ to accept two more arguments, =WINDOW= and =FORCE-P=: ~doom-resize-window WINDOW NEW-SIZE &optional HORIZONTAL FORCE-P~. If =FORCE-P= is non-nil, this function will resize a window regardless of ~window-size-fixed~.
+ =feature=
  + =hydra= Display a separator along the bottom of hydra windows for extra contrast.
+ =ui=
  + =doom-dashboard= Elements are now centered using window-local margins, which fixes discrepancies when multiple dashboards are visible in different sized windows and/or frames (see [[https://github.com/hlissner/doom-emacs/issues/192][#192]]).
  + =hl-todo= Added face-based detection for commented regions, so hl-todo can work in modes with no/poor syntax-table support.
+ =tools=
  + Fixed neotree shrinking when vertical splits were closed.
  + Neotree popup rule now takes ~neo-window-width~ and ~neo-window-position~ into account.
+ =lang=
  + =ruby= Added rake support. See the ~rake~ command.
  + =web= Only install company-web if =:completion company= is enabled.
+ =org=
  + If a table is under point when ~+org/toggle-fold~ is invoked, the table is realigned.
  + =org-capture= Fix a vestigial reference to a long-since-renamed function: ~doom/project-root~.
  + Fixed the incorrect version of org being loaded (site, instead of ELPA) by pushing it up further in the ~load-path~.

* 2.0.5 (Sep 03, 2017)
+ =doom=
  + Added new module: ~tools/rgb~, with tools for dealing with colors (thanks to [[https://github.com/bandresen][bandresen]])
  + Added new module: ~tools/prodigy~, with tools for managing external services (thanks to [[https://github.com/bandresen][bandresen]])
  + Added new module: ~feature/hydra~, offers an extra and customizable layer of modal keybinds (thanks to [[https://github.com/bandresen][bandresen]])
  + Added two new core-lib helpers for macros: ~doom-enlist~ and ~doom-unquote~.
  + Switch to ~doom-fallback-buffer~ after using ~doom/kill-all-buffers~ (or ~:killall!~).